--- a/src/menu.css
+++ b/src/menu.css
@@ -49,6 +49,10 @@
   text-align: center;
 }
 
+.menuList li:hover {
+  cursor: pointer;
+}
+
 .btn {
   text-align: center;
   padding-top: var(--menu-btn-padding-top);
