--- a/src/nav.css
+++ b/src/nav.css
@@ -84,6 +84,10 @@ li {
   height: var(--nav-search-icon-size);
 }
 
+.search img:hover {
+  cursor: pointer;
+}
+
 .navBtns {
   display: flex;
   align-items: center;
